--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: KUZEEEEE
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Andrés Iniesta
+description: Una web homenaje a uno de los jugadores mas grandes de la historia del futbol.
 theme: just-the-docs
 
 url: https://Angryel.github.io
