--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Andrés Iniesta
 description: Una web homenaje a uno de los jugadores mas grandes de la historia del futbol.
 theme: just-the-docs
+color_scheme: dark
 
 url: https://Angryel.github.io
 
