--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ description: Una web homenaje a uno de los jugadores mas grandes de la historia 
 theme: just-the-docs
 color_scheme: dark
 
+logo: iniesta.jpg
+
 url: https://Angryel.github.io
 
 aux_links:
