--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Una web homenaje a uno de los jugadores mas grandes de la historia 
 theme: just-the-docs
 color_scheme: dark
 
-logo: images/Iniesta.png
+logo: "images/Iniesta.png"
 
 url: https://Angryel.github.io
 
