--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ theme: just-the-docs
 color_scheme: dark
 
 logo: "images/iniesta.png"
-favicon_icon: "images/iniesta.png"
+favicon_icon: "images/iniesta.ico"
 
 url: https://Angryel.github.io
 
