--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ theme: just-the-docs
 color_scheme: dark
 
 favicon_icon: "images/iniesta.ico"
-logo: "images/iniesta.png"
+logo: "images/cabecera.png"
 
 url: https://Angryel.github.io
 
