--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Una web homenaje a uno de los jugadores mas grandes de la historia 
 theme: just-the-docs
 color_scheme: dark
 
-favicon_icon: "images/cabecera.ico"
+favicon_ico: "images/cabecera.ico"
 logo: "images/iniesta.png"
 
 url: https://Angryel.github.io
