--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ description: Una web homenaje a uno de los jugadores mas grandes de la historia 
 theme: just-the-docs
 color_scheme: dark
 
-favicon_ico: "images/cabecera.ico"
-logo: "images/iniesta.png"
+favicon_ico: "images/iniesta.ico"
+logo: "images/cabecera.png"
 
 url: https://Angryel.github.io
 
