--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Andrés Iniesta
-description: Una web homenaje a uno de los jugadores mas grandes de la historia del futbol.
+description: Una web homenaje a uno de los jugadores más grandes de la historia del fútbol.
 theme: just-the-docs
 color_scheme: dark
 
