--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Andrés Iniesta
+title: Andrés Iniesta!
 description: Una web homenaje a uno de los jugadores más grandes de la historia del fútbol.
 theme: just-the-docs
 color_scheme: dark
