--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
-title: Andrés Iniesta!
+title: Andrés Iniesta
 description: Una web homenaje a uno de los jugadores más grandes de la historia del fútbol.
 theme: just-the-docs
 color_scheme: dark
 
 favicon_ico: "assets/images/iniesta.ico"
-logo: "assets/images/iniesto.png"
 
 url: https://Angryel.github.io
 
