--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Una web homenaje a uno de los jugadores más grandes de la historia
 theme: just-the-docs
 color_scheme: dark
 
-logo: "assets/images/iniesto.png"
+logo: "assets/images/iniesto.jpg"
 
 url: https://Angryel.github.io
 
