--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,4 @@ logo: "assets/images/iniesto.jpg"
 url: https://Angryel.github.io
 
 aux_links:
-  ## ¡Iniesta de mi vida!: https://www.youtube.com/watch?v=6-EqlQMPmDI{:target="_blank"}
+  **¡Iniesta de mi vida!**: https://www.youtube.com/watch?v=6-EqlQMPmDI{:target="_blank"}
