--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,9 @@ menu:
 
 aux_links:
   ¡Iniesta de mi vida!: https://www.youtube.com/watch?v=6-EqlQMPmDI
+
+nav_external_links:
+  - title: En el Top 3 de Españoles queridos por Inglaterra.
+    url: https://www.youtube.com/watch?v=zWBKP-DZNEc
+    hide_icon: false # set to true to hide the external link icon - defaults to false
+    opens_in_new_tab: true # set to true to open this link in a new tab - defaults to false
